# waisdom-bot

./: .env.example  .gitignore  APPLE_SILICON.md  GETTING_STARTED.md  README.md  pyproject.toml  requirements.txt  setup.py  verify_setup.sh
app/: main.py
app/bot/: telegram_bot.py
app/config/: settings.py
app/core/: content_processor.py  content_repository.py  scheduler.py
app/models/: content.py
app/services/: content_enrichment.py  llm_service.py  vector_store.py
app/utils/: check_env.py  setup_with_uv.py
tests/: test_content_model.py  test_docker.py  test_ragflow_client.py  test_services.py
