[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waisdom-bot"
version = "0.1.0"
description = "A personal AI research assistant for content curation, summarization, smart recall, and actionable insights"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "python-telegram-bot>=20.8",
    "langchain>=0.1.12",
    "langchain-openai>=0.0.6",
    "chromadb>=0.4.23",
    "pydantic>=2.6.3",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "PyPDF2>=3.0.1",
    "markdown>=3.5.2",
    "redis>=5.0.1",
    "apscheduler>=3.10.4",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "tiktoken>=0.6.0",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=24.3.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/waisdom-bot"
Repository = "https://github.com/yourusername/waisdom-bot"
Issues = "https://github.com/yourusername/waisdom-bot/issues"

[project.scripts]
waisdom = "app.main:main"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"